<resources>
    <string name="app_name">Coinflip</string>
    <string name="chat_btn_jobseeker">Jobseeker</string>
    <string name="chat_btn_employer">Employer</string>
    <string name="chat_text">Are you seeking for a job or employees?</string>
    <string name="employer_login_btn">Login</string>
    <string name="employer_no_account_text">No account yet? Create one</string>
    <string name="employer_hint_username">Username</string>
    <string name="employer_hint_password">Password</string>
    <string name="employer_signup_btn">Sign up</string>
    <string name="employer_already_account_text">Already an account? Go back to login.</string>
    <string name="jobseeker_login_btn">Login</string>
    <string name="jobseeker_no_account_text">No account yet? Create one</string>
    <string name="jobseeker_hint_username">Username</string>
    <string name="jobseeker_hint_password">Password</string>
    <string name="jobseeker_signup_btn">Sign up</string>
    <string name="jobseeker_already_account_text">Already an account? Go back to login.</string>
    <string name="jobseeker_hint_phone">Phone</string>
    <string name="invalid_textfields">Username or password fields are empty or invalid.</string>
    <string name="password_not_match">Passwords does not match.</string>
    <string name="signup_successfull">Signup successful.</string>
    <string name="btn_go_to_cv">Go to CV</string>
    <string name="done">Done</string>
    <string name="fetch_id">Fetch ID</string>
    <string name="fetch_info">Fetch Info</string>
    <string name="are_you_sure">Are you sure that you are done?</string>
    <string name="search_title">Search</string>
    <string name="add_job_ad_title">New Job Ad</string>
    <string name="my_profile_title">My Profile</string>
    <string name="all_jobseekers">All Jobseekers</string>
    <string name="logout">Are you sure you want to go back? You will be logged out.</string>
    <string name="please_fetch">Please fetch session ID and CV data before continuing.</string>
    <string name="create">Create</string>
    <string name="favorite">Favorite</string>
</resources>
