<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.codemate.testbot.MainActivity">

    <ImageView
        android:id="@+id/chat_img_logo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/chat_text"
        android:layout_below="@id/chat_img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:text="@string/chat_text"/>

    <Button
        android:id="@+id/chat_btn_jobseeker"
        android:text="@string/chat_btn_jobseeker"
        android:layout_below="@+id/chat_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_homepage"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/chat_btn_employer"
        android:text="@string/chat_btn_employer"
        android:layout_below="@+id/chat_btn_jobseeker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_homepage"
        android:textColor="@color/colorWhite"/>



</RelativeLayout>
