<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_jobseeker_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/jobseeker_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jobseeker_hint_username"
                android:maxLength="10"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/jobseeker_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jobseeker_hint_password"
                android:maxLength="20"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/jobseeker_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/jobseeker_login_btn"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_homepage"/>

        <TextView
            android:id="@+id/jobseeker_link_signup"
            android:text="@string/jobseeker_no_account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="14dp"/>

    </LinearLayout>

</ScrollView>
